build.mps: deprecate generator's MaxPermSize option as it's no longer supported in Java 8.